Fixed mobile and print styles. Added name as h1 title in layout file but is hidden by default, shown when printing.

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -107,6 +107,9 @@ body {
 	box-shadow: 0 0 9px #000;
 	text-align: right;
 }
+#header .title {
+	display: none;
+}
 #header img {
 	border: none;
 	margin-right: 15px;
@@ -135,7 +138,7 @@ body {
 }
 #footer p {
 	padding: 0;
-	margin:0;
+	margin: 0;
 }
 
 /* element specific default styles 
@@ -260,6 +263,7 @@ h2 {border-bottom: 1px solid #ccc;}
 	padding: 0 1em 0 0;
 }
 #nav ul li a, #nav ul li a:active, #nav ul li a:visited {
+	display: inline;
 	-webkit-transition: none;
 	-moz-transition: none;
 	-o-transition: none;
@@ -276,13 +280,20 @@ h2 {border-bottom: 1px solid #ccc;}
 	display: inline;
 	list-style: none;
 	margin: 0 .5em;
+	padding: 0;
 }
 #content {
+	border: 0;
 	margin: 0;
 	padding: 8.5em 1em 1em 1em;
 	width: auto;
 }
+#content .inner {
+	padding: 0;
+}
 #footer {
+	margin: 0;
+	padding: 1em;
 	width: auto;
 }
 
